src/objects/SFDC_Volunteer__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteers</relationshipLabel>
        <relationshipName>R00N30000001WZmLEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Armed Forces Caseworker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BabySitting Course Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Mobile Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Action Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elderly Escort Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Aid Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friendly Visitor Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Researching/Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV/AIDS Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeless shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Tracing/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internationl Humanitarian Law Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifeguard Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Service Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Volunteers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicity aide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Safety Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Group Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Volunteers/Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking / IT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region/Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Call Center Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpentry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching/Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elderly Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking / IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Design</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001WZmMEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volunteer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <columns>Region__c</columns>
        <columns>Skills__c</columns>
        <columns>Interests__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Volunteer_ID {0000}</displayFormat>
        <label>Volunteer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>